@@ -2,6 +2,13 @@
 
 	reviewed by: jribas
 
+	* flumotion/component/producers/fms/fms.py:
+	Modifications to be compatible with new rtmpy
+
+2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>
+
+	reviewed by: jribas
+
 	* flumotion/component/producers/fms/live.py:
 	Modifications to be compatible with new rtmpy
 
